[package]
name = "notion-blog"
version = "0.1.0"
edition = "2021"
description = "Notion Blog"
authors = ["Kali-Team <root@kali-team.cn>"]

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
lol_html = "1.1.1"
serde_json = "1.0"
wasm-bindgen = "0.2.49"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind", "js-sys"] }
[profile.release]
lto = true
strip = true
codegen-units = 1
